--- a/Modelbouwer/View/StorageOrder.xaml
+++ b/Modelbouwer/View/StorageOrder.xaml
@@ -2,15 +2,455 @@
 	x:Class="Modelbouwer.View.StorageOrder"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:Engine="clr-namespace:Syncfusion.UI.Xaml.TreeView.Engine;assembly=Syncfusion.SfTreeView.WPF"
+	xmlns:converter="clr-namespace:Modelbouwer.Converters"
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+	xmlns:helper="clr-namespace:Modelbouwer.Helper"
 	xmlns:local="clr-namespace:Modelbouwer.View"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+	xmlns:syncfusion="http://schemas.syncfusion.com/wpf"
+	xmlns:viewmodels="clr-namespace:Modelbouwer.ViewModels"
 	Title="StorageOrder"
 	d:DesignHeight="600"
 	d:DesignWidth="1000"
-	mc:Ignorable="d">
+	mc:Ignorable="d"
+	>
 
-	<Grid>
-		<TextBlock Text="StorageOrder" />
-	</Grid>
+	<Page.DataContext>
+		<viewmodels:InventoryOrderViewModel />
+	</Page.DataContext>
+
+	<Page.Resources>
+		<converter:GreaterThanZeroConverter x:Key="GreaterThanZeroConverter" />
+	</Page.Resources>
+
+	<Border Background="{DynamicResource {x:Static SystemColors.InfoBrushKey}}" Style="{DynamicResource MainBorder}">
+		<Grid Background="{DynamicResource {x:Static SystemColors.InfoBrushKey}}">
+			<Grid.RowDefinitions>
+				<RowDefinition Height="60" />
+				<RowDefinition Height=".5*" />
+				<RowDefinition Height="45" />
+				<RowDefinition Height="*" />
+				<RowDefinition Height="45" />
+				<RowDefinition Height="2*" />
+				<RowDefinition Height="0" />
+			</Grid.RowDefinitions>
+
+			<!--#region Page title-->
+			<StackPanel
+				Grid.Row="0"
+				Margin="0,0,0,0"
+				Orientation="Vertical"
+				>
+				<Grid>
+					<Grid.ColumnDefinitions>
+						<ColumnDefinition Width="*" />
+						<ColumnDefinition Width="2*" />
+					</Grid.ColumnDefinitions>
+
+					<TextBlock
+						Grid.Column="0"
+						Style="{DynamicResource Title}"
+						Text="{StaticResource Edit.Order.Title}"
+						/>
+				</Grid>
+				<Path Style="{DynamicResource TitleLine}" />
+				<TextBlock
+					Grid.Column="0"
+					Style="{DynamicResource SubTitle}"
+					Text="{StaticResource Edit.Order.Subtitle}"
+					/>
+				<CheckBox
+					x:Name="valueShow"
+					IsChecked="True"
+					Style="{DynamicResource HiddenCheckBox}"
+					/>
+			</StackPanel>
+			<!--#endregion-->
+
+			<!--#region Selected lines to order-->
+			<!--#region Order row block-->
+			<Grid Grid.Row="2">
+				<Grid.ColumnDefinitions>
+					<ColumnDefinition Width="*" />
+					<ColumnDefinition Width="380" />
+				</Grid.ColumnDefinitions>
+				<TextBlock Style="{DynamicResource DataGrid.SelectionTitle}" Text="{StaticResource Edit.Order.OrderRows.Text}" />
+
+			</Grid>
+			<!--#endregion-->
+
+			<!--#region DataGrid-->
+			<syncfusion:SfDataGrid
+				x:Name="selectedProductsDataGrid"
+				Grid.Row="3"
+				Margin="10,5"
+				AllowDeleting="True"
+				AllowEditing="False"
+				AllowResizingColumns="True"
+				AllowTriStateSorting="True"
+				AutoGenerateColumns="False"
+				ColumnSizer="Star"
+				ItemsSource="{Binding SelectedProducts, Mode=TwoWay}"
+				SelectedIndex="0"
+				ShowGroupDropArea="False"
+				SortClickAction="SingleClick"
+				>
+
+				<syncfusion:SfDataGrid.Columns>
+					<syncfusion:GridTextColumn
+						HeaderText="{StaticResource Edit.Inventory.DataGrid.Header.Id}"
+						IsHidden="True"
+						MappingName="ProductId"
+						/>
+
+					<syncfusion:GridTextColumn
+						AllowGrouping="False" Width="150"
+						AllowSorting="True"
+						HeaderText="{StaticResource Edit.Order.DataGrid.Header.Code}"
+						HorizontalHeaderContentAlignment="Left"
+						MappingName="ProductCode"
+						/>
+
+					<syncfusion:GridTextColumn
+						AllowGrouping="False" Width="190"
+						AllowSorting="True"
+						AllowEditing="True"
+						HeaderText="{StaticResource Edit.Order.DataGrid.Header.SupplierCode}"
+						HorizontalHeaderContentAlignment="Left"
+						MappingName="SupplierProductNumber"
+						/>
+					<syncfusion:GridTextColumn
+						AllowGrouping="False"
+						AllowSorting="True"
+						HeaderText="{StaticResource Edit.Order.DataGrid.Header.Name}"
+						HorizontalHeaderContentAlignment="Left"
+						MappingName="ProductName"
+						/>
+
+					<syncfusion:GridNumericColumn
+						AllowEditing="False" Width="90"
+						AllowFiltering="False"
+						AllowGrouping="False"
+						AllowSorting="True"
+						HeaderText="{StaticResource Edit.Order.DataGrid.Header.MinStock}"
+						HorizontalHeaderContentAlignment="Right"
+						MappingName="ProductMinimalStock"
+						MinValue="0"
+						/>
+
+					<syncfusion:GridNumericColumn
+						AllowSorting="True" Width="90"
+						HeaderText="{StaticResource Edit.Order.DataGrid.Header.Inventory}"
+						HorizontalHeaderContentAlignment="Right"
+						MappingName="ProductInventory"
+						MinValue="0"
+						/>
+
+					<syncfusion:GridNumericColumn
+						AllowEditing="True" Width="90"
+						AllowFiltering="False"
+						AllowGrouping="False"
+						AllowSorting="True"
+						HeaderText="{StaticResource Edit.Order.DataGrid.Header.SupplierPrice}"
+						HorizontalHeaderContentAlignment="Right"
+						MappingName="SupplierPrice"
+						MinValue="0"
+						/>
+
+					<syncfusion:GridNumericColumn
+						AllowEditing="True" Width="90"
+						HeaderText="{StaticResource Edit.Order.DataGrid.Header.Order}"
+						HorizontalHeaderContentAlignment="Right"
+						MappingName="ProductShortInventory"
+						/>
+
+				</syncfusion:SfDataGrid.Columns>
+			</syncfusion:SfDataGrid>
+			<!--#endregion-->
+			<!--#region-->
+
+			<!--#region All available products-->
+			<!--#region Search block-->
+			<Grid Grid.Row="4">
+				<Grid.ColumnDefinitions>
+					<ColumnDefinition Width="*" />
+					<ColumnDefinition Width="380" />
+				</Grid.ColumnDefinitions>
+				<TextBlock Style="{DynamicResource DataGrid.SelectionTitle}" Text="{StaticResource Edit.Order.SelectOrderRows.Text}" />
+
+				<Border
+					Grid.Column="1"
+					Width="365"
+					Height="35"
+					Margin="5"
+					Background="White"
+					BorderBrush="#cccccc"
+					BorderThickness="1"
+					CornerRadius="5"
+					>
+
+					<Grid VerticalAlignment="Center">
+						<Grid.ColumnDefinitions>
+							<ColumnDefinition Width="*" />
+							<ColumnDefinition Width="15" />
+							<ColumnDefinition Width="35" />
+						</Grid.ColumnDefinitions>
+
+						<TextBox
+							x:Name="FilterSearchText"
+							Grid.Column="0"
+							Width="306"
+							Height="27"
+							MinWidth="220"
+							Margin="3"
+							Padding="3,0"
+							HorizontalAlignment="Left"
+							VerticalAlignment="Center"
+							Background="White"
+							Tag="{StaticResource Edit.Order.DataGrid.FilterSearch.Search.Tag}"
+							TextChanged="FilterSearch"
+							ToolTip="{StaticResource Edit.Order.DataGrid.FilterSearch.Search.Tooltip}"
+							UseLayoutRounding="True"
+							/>
+
+						<Button
+							x:Name="ClearFilterSearch"
+							Grid.Column="1"
+							Margin="0,0,0,4"
+							HorizontalAlignment="Center"
+							VerticalAlignment="Bottom"
+							Background="Transparent"
+							BorderThickness="0"
+							Click="ClearText"
+							ToolTip="{StaticResource Edit.Order.DataGrid.FilterSearch.Search.Clear.Tooltip}"
+							Visibility="Collapsed"
+							>
+							<Image Source="{StaticResource clear}" />
+						</Button>
+
+						<GridSplitter
+							Grid.Column="1"
+							Width="1"
+							VerticalAlignment="Stretch"
+							Background="LightGray"
+							/>
+
+						<Button
+							x:Name="FilterButton"
+							Grid.Column="2"
+							Width="20"
+							Height="20"
+							Background="Transparent"
+							BorderThickness="0"
+							Click="ToggleButton"
+							ToolTip="{StaticResource Edit.Order.DataGrid.Filter.Tooltip}"
+							Visibility="Collapsed"
+							>
+							<Image
+								Width="20"
+								Height="20"
+								Source="{StaticResource filter}"
+								/>
+						</Button>
+						<Button
+							x:Name="SearchButton"
+							Grid.Column="2"
+							Width="20"
+							Height="20"
+							Background="Transparent"
+							BorderThickness="0"
+							Click="ToggleButton"
+							ToolTip="{StaticResource Edit.Order.DataGrid.Search.Tooltip}"
+							Visibility="Visible"
+							>
+							<Image
+								Width="18"
+								Height="18"
+								Source="{StaticResource search}"
+								/>
+						</Button>
+					</Grid>
+				</Border>
+			</Grid>
+			<!--#endregion-->
+
+			<!--#region Datagrid-->
+			<syncfusion:SfDataGrid
+				x:Name="dataGrid"
+				Grid.Row="5"
+				Margin="10,5"
+				AllowDeleting="False"
+				AllowEditing="False"
+				AllowFiltering="False"
+				AllowGrouping="True"
+				AllowResizingColumns="True"
+				AllowTriStateSorting="True"
+				AutoExpandGroups="True"
+				AutoGenerateColumns="False"
+				ColumnSizer="Star"
+				GroupDropAreaStyle="{DynamicResource SfDataGridGroupDropAreaStyle1}"
+				IsGroupDropAreaExpanded="True"
+				ItemsSource="{Binding InventoryOrder, Mode=TwoWay}"
+				SelectedIndex="0"
+				ShowColumnWhenGrouped="True"
+				ShowGroupDropArea="False"
+				SortClickAction="SingleClick"
+				>
+
+				<syncfusion:SfDataGrid.Resources>
+					<Style TargetType="syncfusion:GridTableSummaryCell">
+						<Setter Property="FontSize" Value="13" />
+						<Setter Property="FontStyle" Value="Italic" />
+						<Setter Property="FontWeight" Value="Bold" />
+						<Setter Property="Foreground" Value="DarkBlue" />
+						<Setter Property="HorizontalContentAlignment" Value="Right" />
+					</Style>
+
+					<Style TargetType="syncfusion:GridGroupSummaryCell">
+						<Setter Property="FontSize" Value="12" />
+						<Setter Property="FontStyle" Value="Italic" />
+						<Setter Property="FontWeight" Value="Bold" />
+						<Setter Property="Foreground" Value="Blue" />
+						<Setter Property="HorizontalContentAlignment" Value="Right" />
+					</Style>
+				</syncfusion:SfDataGrid.Resources>
+
+				<syncfusion:SfDataGrid.GroupColumnDescriptions>
+					<syncfusion:GroupColumnDescription ColumnName="ProductFromSupplier" />
+				</syncfusion:SfDataGrid.GroupColumnDescriptions>
+
+				<syncfusion:SfDataGrid.Columns>
+					<syncfusion:GridCheckBoxColumn
+						Width="30"
+						AllowEditing="True"
+						HeaderText="Select"
+						MappingName="IsSelected"
+						/>
+					<syncfusion:GridTextColumn
+						HeaderText="{StaticResource Edit.Inventory.DataGrid.Header.Id}"
+						IsHidden="True"
+						MappingName="ProductId"
+						/>
+
+					<syncfusion:GridTextColumn
+						AllowFiltering="False"
+						AllowGrouping="True"
+						AllowSorting="False"
+						HeaderText="Leverancier"
+						IsHidden="True"
+						MappingName="ProductFromSupplier"
+						/>
+
+					<syncfusion:GridTextColumn
+						Width="20"
+						AllowFiltering="False"
+						AllowGrouping="True"
+						AllowSorting="False"
+						HeaderText=""
+						MappingName="ShowCellIcon"
+						>
+						<syncfusion:GridTextColumn.CellTemplate>
+							<DataTemplate>
+								<Image>
+									<Image.Style>
+										<Style TargetType="{x:Type Image}">
+											<Setter Property="Margin" Value="3" />
+											<Setter Property="Source" Value="{x:Null}" />
+											<Setter Property="Visibility" Value="Collapsed" />
+
+											<Style.Triggers>
+												<DataTrigger Binding="{Binding ProductShortInventory, Converter={StaticResource GreaterThanZeroConverter}}" Value="True">
+													<Setter Property="Source" Value="{StaticResource short}" />
+													<Setter Property="ToolTip" Value="Er is te weinig voorraad, ook wanneer eventuele bestellingen worden toegevoegd" />
+													<Setter Property="Visibility" Value="Visible" />
+												</DataTrigger>
+
+												<MultiDataTrigger>
+													<MultiDataTrigger.Conditions>
+														<Condition Binding="{Binding ProductShortInventory}" Value="0" />
+													</MultiDataTrigger.Conditions>
+													<Setter Property="Source" Value="{x:Null}" />
+													<Setter Property="Visibility" Value="Collapsed" />
+												</MultiDataTrigger>
+											</Style.Triggers>
+										</Style>
+									</Image.Style>
+								</Image>
+							</DataTemplate>
+						</syncfusion:GridTextColumn.CellTemplate>
+					</syncfusion:GridTextColumn>
+
+					<syncfusion:GridTextColumn
+						AllowGrouping="False" Width="150"
+						AllowSorting="True"
+						HeaderText="{StaticResource Edit.Order.DataGrid.Header.Code}"
+						HorizontalHeaderContentAlignment="Left"
+						MappingName="ProductCode"
+						/>
+
+					<syncfusion:GridTextColumn
+						AllowGrouping="False"
+						AllowSorting="True"
+						HeaderText="{StaticResource Edit.Order.DataGrid.Header.Name}"
+						HorizontalHeaderContentAlignment="Left"
+						MappingName="ProductName"
+						/>
+
+					<syncfusion:GridNumericColumn
+						AllowEditing="True" Width="90"
+						AllowFiltering="False"
+						AllowGrouping="False"
+						AllowSorting="True"
+						HeaderText="{StaticResource Edit.Order.DataGrid.Header.MinStock}"
+						HorizontalHeaderContentAlignment="Right"
+						MappingName="ProductMinimalStock"
+						MinValue="0"
+						/>
+
+					<syncfusion:GridNumericColumn
+						AllowEditing="True" Width="90"
+						AllowFiltering="False"
+						AllowGrouping="False"
+						AllowSorting="True"
+						HeaderText="{StaticResource Edit.Order.DataGrid.Header.Price}"
+						HorizontalHeaderContentAlignment="Right"
+						MappingName="ProductPrice"
+						MinValue="0"
+						/>
+
+					<syncfusion:GridNumericColumn
+						AllowEditing="True" Width="90"
+						AllowFiltering="False"
+						AllowGrouping="False"
+						AllowSorting="True"
+						HeaderText="{StaticResource Edit.Order.DataGrid.Header.Inventory}"
+						HorizontalHeaderContentAlignment="Right"
+						MappingName="ProductInventory"
+						MinValue="0"
+						/>
+
+					<syncfusion:GridNumericColumn
+						AllowFiltering="False" Width="90"
+						AllowGrouping="False"
+						AllowSorting="True"
+						HeaderText="{StaticResource Edit.Order.DataGrid.Header.InOrder}"
+						HorizontalHeaderContentAlignment="Right"
+						MappingName="ProductInOrder"
+						/>
+
+					<syncfusion:GridNumericColumn
+						AllowFiltering="False" Width="90"
+						AllowGrouping="False"
+						HeaderText="{StaticResource Edit.Order.DataGrid.Header.Short}"
+						HorizontalHeaderContentAlignment="Right"
+						IsHidden="False"
+						MappingName="ProductShortInventory"
+						/>
+				</syncfusion:SfDataGrid.Columns>
+			</syncfusion:SfDataGrid>
+			<!--#endregion-->
+			<!--#endregion-->
+		</Grid>
+	</Border>
 </Page>
