--- a/Modelbouwer/Resources/Styles/DataGrid.xaml
+++ b/Modelbouwer/Resources/Styles/DataGrid.xaml
@@ -1,22 +1,30 @@
 ﻿<ResourceDictionary
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:data="clr-namespace:System.Data;assembly=System.Data"
 	xmlns:local="clr-namespace:Syncfusion.Windows.Tools.Controls;assembly=Syncfusion.Shared.WPF"
 	xmlns:skin="clr-namespace:Syncfusion.Windows.Shared;assembly=Syncfusion.Shared.WPF"
+	xmlns:syncfusion="http://schemas.syncfusion.com/wpf"
 	xmlns:t="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero"
-	
-	xmlns:syncfusion="http://schemas.syncfusion.com/wpf">
-	
+	>
+
 	<!--#region Default-->
 	<!--#endregion-->
 
 	<Style x:Key="SfDataGridGroupDropAreaStyle1" TargetType="{x:Type syncfusion:GroupDropArea}">
-		<Setter Property="Height" Value="65"/>
-		<Setter Property="Foreground" Value="DarkSlateBlue"/>
-		<Setter Property="Background" Value="#FFF5F2CC"/>
-		<Setter Property="ToolTip" Value="{StaticResource SfDataGrid.GroupBox.Tooltip}"/>
-		<Setter Property="GroupDropAreaText" Value="{StaticResource SfDataGrid.GroupBox.Text}"/>
+		<Setter Property="Background" Value="#FFF5F2CC" />
+		<Setter Property="Foreground" Value="DarkSlateBlue" />
+		<Setter Property="GroupDropAreaText" Value="{StaticResource SfDataGrid.GroupBox.Text}" />
+		<Setter Property="Height" Value="65" />
+		<Setter Property="ToolTip" Value="{StaticResource SfDataGrid.GroupBox.Tooltip}" />
 	</Style>
+
+	<Style x:Key="EditableCellStyle" TargetType="syncfusion:GridCell">
+		<Setter Property="Background" Value="#3efefe" />
+		<Setter Property="BorderBrush" Value="Blue"/>
+		<Setter Property="BorderThickness" Value="1"/>
+	</Style>
+	
 
 </ResourceDictionary>
 
