--- a/Modelbouwer/Resources/Styles/General.xaml
+++ b/Modelbouwer/Resources/Styles/General.xaml
@@ -2,6 +2,7 @@
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	xmlns:local="clr-namespace:Syncfusion.Windows.Tools.Controls;assembly=Syncfusion.Shared.WPF"
+	xmlns:syncfusion="http://schemas.syncfusion.com/wpf"
 	xmlns:skin="clr-namespace:Syncfusion.Windows.Shared;assembly=Syncfusion.Shared.WPF"
 	xmlns:t="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero"
 	>
@@ -693,6 +694,72 @@
 		</Style.Triggers>
 	</Style>
 	<!--#endregion-->
+
+	<Style x:Key="DefaultSfDataGridEditableTextBox" TargetType="TextBox">
+		<Setter Property="Background" Value="Yellow" />
+		<Setter Property="BorderBrush" Value="Transparent" />
+		<Setter Property="BorderThickness" Value="0" />
+		<Setter Property="FocusVisualStyle" Value="{x:Null}" />
+		<Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}" />
+		<Setter Property="KeyboardNavigation.TabNavigation" Value="None" />
+		<Setter Property="Padding" Value="2,0" />
+		<Setter Property="ScrollViewer.PanningMode" Value="VerticalFirst" />
+		<Setter Property="Stylus.IsFlicksEnabled" Value="False" />
+		<Setter Property="Template">
+			<Setter.Value>
+				<ControlTemplate TargetType="{x:Type TextBox}">
+					<Border
+					x:Name="border"
+					Background="{TemplateBinding Background}"
+					BorderBrush="{TemplateBinding BorderBrush}"
+					BorderThickness="{TemplateBinding BorderThickness}"
+					CornerRadius="5"
+					SnapsToDevicePixels="True"
+					>
+						<Grid Margin="{TemplateBinding Padding}">
+							<ScrollViewer
+							x:Name="PART_ContentHost"
+							Focusable="False"
+							HorizontalScrollBarVisibility="Hidden"
+							VerticalScrollBarVisibility="Hidden"
+							/>
+							<Label
+							x:Name="WaterMarkLabel"
+							Padding="{TemplateBinding Padding}"
+							HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+							VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"
+							Content="{TemplateBinding Tag}"
+							FontStyle="Italic"
+							FontWeight="{TemplateBinding FontWeight}"
+							Foreground="{DynamicResource SecondaryGrayColor}"
+							Visibility="Collapsed"
+							/>
+						</Grid>
+					</Border>
+					<ControlTemplate.Triggers>
+						<MultiTrigger>
+							<MultiTrigger.Conditions>
+								<Condition Property="Text" Value="" />
+							</MultiTrigger.Conditions>
+							<Setter TargetName="WaterMarkLabel" Property="Visibility" Value="Visible" />
+						</MultiTrigger>
+
+						<Trigger Property="IsEnabled" Value="false">
+							<Setter TargetName="border" Property="Opacity" Value="0.56" />
+						</Trigger>
+
+						<Trigger Property="IsMouseOver" Value="true">
+							<Setter TargetName="border" Property="BorderBrush" Value="{DynamicResource TextBox.MouseOver.Border}" />
+						</Trigger>
+
+						<Trigger Property="IsKeyboardFocused" Value="true">
+							<Setter TargetName="border" Property="BorderBrush" Value="Transparent" />
+						</Trigger>
+					</ControlTemplate.Triggers>
+				</ControlTemplate>
+			</Setter.Value>
+		</Setter>
+	</Style>
 
 	<!--#region ToggleButton Textbox, with rounded corners-->
 	<Style x:Key="DisabledTextBox" TargetType="TextBox">
