Working on fix lo load the productslist But function is never reached

--- a/Modelbouwer/View/StorageOrder.xaml
+++ b/Modelbouwer/View/StorageOrder.xaml
@@ -251,7 +251,7 @@
 				AllowTriStateSorting="True"
 				AutoGenerateColumns="False"
 				ColumnSizer="Star"
-				ItemsSource="{Binding InventoryOrderSupplierViewModel.SelectedProducts, Mode=TwoWay}"
+				ItemsSource="{Binding SupplyOrderViewModel.SelectedProducts, Mode=TwoWay}"
 				SelectedIndex="0"
 				ShowGroupDropArea="False"
 				SortClickAction="SingleClick"
@@ -487,7 +487,7 @@
 				ColumnSizer="Star"
 				GroupDropAreaStyle="{DynamicResource SfDataGridGroupDropAreaStyle1}"
 				IsGroupDropAreaExpanded="True"
-				ItemsSource="{Binding InventoryOrderSupplierViewModel.ProductList, Mode=TwoWay}"
+				ItemsSource="{Binding SupplyOrderViewModel.ProductList, Mode=TwoWay}"
 				SelectedIndex="0"
 				ShowColumnWhenGrouped="True"
 				ShowGroupDropArea="False"
