Implemented Product selection after selecting an excisting order. The datagrid is disabled for editing as are the textboxes when an existing order is selected.
Changing an existing order is not allowed.

--- a/Modelbouwer/View/StorageOrder.xaml
+++ b/Modelbouwer/View/StorageOrder.xaml
@@ -128,6 +128,7 @@
 							ItemsSource="{Binding SupplyOrderViewModel.FilteredOrders}"
 							SelectedItem="{Binding SupplyOrderViewModel.SelectedOrder, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
 							SelectedValuePath="SupplyOrderId"
+							SelectionChanged="OrderSelected"
 							ToolTip="{StaticResource Edit.Inventory.Orders.Supplier.Tooltip}"
 							Visibility="{Binding SupplyOrderViewModel.FilteredOrders.Count, Converter={StaticResource CountToVisibilityConverter}}"
 							>
@@ -482,10 +483,11 @@
 				AllowGrouping="True"
 				AllowResizingColumns="True"
 				AllowTriStateSorting="True"
-				AutoExpandGroups="True"
+				AutoExpandGroups="True" 
 				AutoGenerateColumns="False"
 				ColumnSizer="Star"
 				GroupDropAreaStyle="{DynamicResource SfDataGridGroupDropAreaStyle1}"
+				IsEnabled="{Binding SupplyOrderViewModel.IsNewOrder, Converter={StaticResource InverseBooleanConverter}, ConverterParameter=Invert}"
 				IsGroupDropAreaExpanded="True"
 				ItemsSource="{Binding SupplyOrderViewModel.ProductList, Mode=TwoWay}"
 				SelectedIndex="0"
